--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,22 +7,18 @@
     <uses-sdk android:minSdkVersion="14" />
 
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" >
-        <receiver android:name=".SysAdminWidgetProvider" android:label="@string/app_name" >
-	        
-	        <intent-filter>
-	        	<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />            
-	        </intent-filter>
-	        
-	        <meta-data 
-	            android:name="android.appwidget.provider"
-	            android:resource="@xml/widget_info" />
-	        
-	    </receiver>
-	    <activity android:name=".Activity.WidgetConfigure_Server">
+        
+	    <activity android:name=".TestActivity">
     		<intent-filter>
-        		<action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+        		<action android:name="android.test"/>
     		</intent-filter>
 		</activity>	    
     </application>
 
+        <activity
+            android:label="@string/app_name"
+            android:name="com.sysAdmin."
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+        </activity>
+        
 </manifest>
