--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,8 +10,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" >
-        <receiver android:name=".SysAdminWidgetProvider" android:label="@string/app_name" >
-	        
+        
+        <receiver android:name=".SysAdminWidgetProvider" android:label="@string/app_name" >	       
 	        <intent-filter>
 	        	<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
 	        	<action android:name="com.SysAdmin.APPWIDGET_UPDATE"/>         
@@ -22,6 +22,7 @@
 	            android:resource="@xml/widget_info" />
 	        
 	    </receiver>
+	    
 	    <activity android:name=".Activity.CheckServerActivity" 
 	        android:uiOptions="splitActionBarWhenNarrow"
 	        android:theme="@android:style/Theme.Holo">
@@ -35,17 +36,17 @@
 		    android:uiOptions="splitActionBarWhenNarrow" />		
 		    
 		<activity android:name=".Activity.FilterActivity"
-		    android:theme="@android:style/Theme.Holo" />
+		    android:theme="@android:style/Theme.Holo"
+		    android:uiOptions="splitActionBarWhenNarrow" />
 		    
+		<activity android:name=".Activity.LoadWidgetActivity" 
+		    android:theme="@android:style/Theme.Holo" />
+		
 		<!-- Service to perform updates -->
 		<service
 		    android:name=".UpdateService" 
 		    android:permission="android.permission.BIND_REMOTEVIEWS"
-		    android:exported="false"/>
-		
-		<activity android:name=".Activity.LoadWidgetActivity" 
-		    android:theme="@android:style/Theme.Holo" />
+		    android:exported="false"/>			
 		
     </application>
-
 </manifest>
