--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,11 +44,16 @@
 		<activity android:name=".Activity.LoadWidgetActivity" 
 		    android:theme="@android:style/Theme.Holo" />
 		
+		<activity android:name=".FileDialog.FileDialog"
+		    android:theme="@android:style/Theme.Holo" />
+		
 		<!-- Service to perform updates -->
 		<service
 		    android:name=".UpdateService" 
 		    android:permission="android.permission.BIND_REMOTEVIEWS"
-		    android:exported="false"/>			
+		    android:exported="false"/>	
+		    
+				
 		
     </application>
 </manifest>
