--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.BRICK"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
-    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:debuggable="true" >
+    <application android:icon="@drawable/nagios_logo" android:label="@string/app_name" android:debuggable="true" >
         
         <receiver android:name=".SysAdminWidgetProvider" android:label="@string/app_name" >	       
 	        <intent-filter>
