--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="C:/Users/patrik/Downloads/flexjson-2.1/flexjson-2.1/flexjson-2.1.jar"/>
+	<classpathentry kind="lib" path="O:/Projects/IT-HTL svn/SysAdmin/EE/1.5_CO/SysAdmin-Nagios-Client/flexjson-2.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
